--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -54,41 +54,163 @@ html, body {
 /**** Text Styling ***/
 body{
   font-size: 16px;
+  overflow-y: hidden;
+  font-family: 'Source Sans Pro', sans-serif;
+  background: #ECF0F1;
+  /*font-family: 'Slabo 27px', serif;*/
 }
 
 h1{
-
+  font-size: 4.5em;
+  font-weight: 200;
+  line-height: 1.25em;
 }
 
 h2 {
-  font-size: 3.125em;
+  font-size: 1.75em;
+  font-weight: 100;
+  line-height: 1.25em;
+  letter-spacing: .075em;
 }
 
 
+/**** UI Elements ***/
+input[type="submit"], button{
+  background: #3498db;
+  border: 1px solid #2980B9;
+  color: #fff;
+  padding: 7px 15px;
+  border-radius: 2px;
+  outline: none;
+  cursor: pointer;
+  text-shadow: 1px 1px 0px rgba(150, 150, 150, 0.7);
+  -webkit-box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow:    1px 1px 2px 0px rgba(50, 50, 50, 0.75);
+  box-shadow:         1px 1px 2px 0px rgba(50, 50, 50, 0.75);
+}
 
-/**** Layout ***/
+  label{
+    display: block;
+    margin: .75em 0; 
+  }
+
+
+  input[type="text"], input[type="email"], input[type="tel"], input[type="password"]{
+    padding: 7px 5px;
+    border: 1px solid grey;
+    border-radius: 2px;
+    width: 150px;
+  }
+
+
+  input[type="submit"]:active, button:active{
+    background: #2980b9;
+    border: 1px solid #2C3E50;
+    -webkit-box-shadow: 0px 0px 0px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    0px 0px 0px 0px rgba(50, 50, 50, 0.75);
+    box-shadow:         0px 0px 0px 0px rgba(50, 50, 50, 0.75);
+  }
+
+  input[type="submit"].btn-lg, button.btn-lg{
+    padding: 10px 20px;
+  }
+
+  .form-section{
+    border: 1px solid black;
+    margin: 0 0 20px 0;
+    padding: 15px;
+  }
+
+  .form-tip{
+    font-size: .75em;
+    color: #969696;
+    display: block;
+  }
+
+  .form-error{
+    color: #E74C3C;
+  }
+
+/**** Page Layout ***/
 
 header.main-header{
   width: 100%;
-  height: 75px;
+  height: 68px;
   background: #fff;
+  padding: 15px 0 0 0;
+  border-bottom: 1px solid #2C3E50;
+}
+  .logo{
+    float: left;
+    margin: 0 0 0 15%;
+  }
+
+  .logo h1{
+    font-family: 'Poiret One', cursive;
+    font-size: 2.25em;
+    cursor: pointer;
+  }
+
+  .login-controls{
+    float: right;
+    margin: 10px 15% 0 0;
+  }
+
+
+.content-area{
+  -webkit-box-shadow: inset 0px 2px 2px 0px rgba(50, 50, 50, 0.7);
+  -moz-box-shadow:    inset 0px 2px 2px 0px rgba(50, 50, 50, 0.7);
+  box-shadow:         inset 0px 2px 2px 0px rgba(50, 50, 50, 0.7);
+  padding: 1px 0 0 0;
 }
 
+.view-container{
+  width: 70%;
+  margin: 0 auto;
+}
 
-
-/* home page */
+/* Home Page */
 .home {
   height:100%;
   width: 100%;
   padding: 0;
   background:  no-repeat center center fixed;
-  background-image: url(../img/home-bg.jpg); 
+  background-image: url(../img/bg-puppy.jpg); 
   background-position: center 75px;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
+
+  .home-signup{
+    width: 100%;
+    margin: 5% auto;
+    color: #fff;
+    text-align: center;
+    text-shadow: 1px 0px 1px rgba(150, 150, 150, 1);
+  }
+
+    .home-signup h2{
+      margin: 0 0 1.5em;
+    }
+  
+
+/* Signup Page*/
+
+#signup-form{
+
+}
+
+
+
+
+
+
+
+
+
+
 
 .cta {
   text-align: center;
