--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -99,11 +99,16 @@ input[type="submit"], button{
   }
 
 
-  input[type="text"], input[type="email"], input[type="tel"], input[type="password"]{
+  input[type="text"], input[type="email"], input[type="tel"], input[type="password"], input[type="number"]{
     padding: 7px 5px 8px;
     border: 1px solid #c4c6c6;
     border-radius: 2px;
     width: 150px;
+    margin: 0 0 15px 0;
+  }
+
+  input[type="number"]{
+    width: 50px;
   }
 
 
@@ -120,11 +125,21 @@ input[type="submit"], button{
   }
 
   input[type="checkbox"]{
-    border-radius: 0;
+    display: none;
   }
 
-  input[type="checkbox"]:checked + label {
-   
+  input[type="checkbox"] + label span {
+      display:inline-block;
+      width:19px;
+      height:19px;
+      margin:-1px 4px 0 0;
+      vertical-align:middle;
+      background:url(../img/check_radio_buttons.png) left top no-repeat;
+      cursor:pointer;
+  }
+
+  input[type="checkbox"]:checked + label span {
+      background:url(../img/check_radio_buttons.png) -19px top no-repeat;
   }
 
   .form-section{
@@ -138,7 +153,7 @@ input[type="submit"], button{
     font-size: .75em;
     color: #969696;
     display: block;
-    margin: 12px 0 0 0;
+    margin: 12px 0 10px 0;
   }
 
   .form-error{
@@ -151,11 +166,14 @@ header.main-header{
   width: 100%;
   height: 68px;
   background: #fff;
-  padding: 15px 0 0 0;
+  padding-top: 15px;
   border-bottom: 1px solid #2C3E50;
-  -webkit-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.7);
-  -moz-box-shadow:    0px 2px 2px 0px rgba(50, 50, 50, 0.7);
-  box-shadow:         0px 2px 2px 0px rgba(50, 50, 50, 0.7);
+  -webkit-box-shadow: 0px 0px 0px 0px rgba(50, 50, 50, 0.7);
+  -moz-box-shadow:    0px 0px 0px 0px rgba(50, 50, 50, 0.7);
+  box-shadow:         0px 0px 0px 0px rgba(50, 50, 50, 0.7);
+      position: fixed;
+    top:0; 
+    left:0;
 }
   .logo{
     float: left;
@@ -174,18 +192,17 @@ header.main-header{
   }
 
   header.fixed{
-    position: fixed;
-    top:0; 
-    left:0;
-    -webkit-box-shadow: 0px 1px 1px 0px rgba(50, 50, 50, 0.7);
-    -moz-box-shadow:    0px 1px 1px 0px rgba(50, 50, 50, 0.7);
-    box-shadow:         0px 1px 1px 0px rgba(50, 50, 50, 0.7);
+
+    -webkit-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.7);
+    -moz-box-shadow:    0px 2px 2px 0px rgba(50, 50, 50, 0.7);
+    box-shadow:         0px 2px 2px 0px rgba(50, 50, 50, 0.7);
   }
 
 
 .content-area{
+
   padding: 1px 0 25px 0;
-  /*margin: 83px 0 0 0;*/
+  margin: 83px 0 0 0; /*equal to header height + padding*/
 }
 
 .view-container{
@@ -229,6 +246,14 @@ header.main-header{
   #signup-page h2{
     margin: 1.5em 0 .5em;
   }
+
+  #signup-page fieldset{
+    display: none;
+  }
+
+     #signup-page fieldset.active{
+      display: block;
+     }
 
 
 
